--- a/tutorial.html
+++ b/tutorial.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="sartup-login.css">
 </head>
 
-<header class="p-3 mb-3 border-bottom">
+<header class="p-3 mb-3 ">
     <nav class="container" role="navigation">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
@@ -47,20 +47,10 @@
                     <i class="fa fa-moon" aria-hidden="true"></i>
                     <i class="fa fa-sun" aria-hidden="true" style="display: none"></i>
                 </button>
-
-                <!--
-                <button type="button" class="btn btn-outline-primary me-2">Login</button>
-                <button type="button" class="btn btn-primary">Sign-up</button>
-                -->
-                <!--
-                <button class="btn">
-                    <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="studyM8" data-color="#FFDD00" data-emoji=""  data-font="Poppins" data-text="Support us" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
-                </button>
-                -->
             </div>
-
         </div>
     </nav>
+    <hr>
 </header>
 
 
@@ -81,7 +71,7 @@
       <br>
 
       <div class="container" style="margin-bottom: 1%">
-          <h5>Hey there!<br> Thank you so much for checking out StudyMateAi.<br> We've put a lot of effort into this and hope you are enjoying the extension, and it's capabilities.<br> If you are not sure on how StudyMateAi works or need a showcase of the features, feel free to explore on this page. :)</h5>
+          <h5>Hey there!<br> Thank you so much for checking out StudyMateAI.<br> We've put a lot of effort into this and hope you are enjoying the extension, and it's capabilities.<br> If you are not sure on how StudyMateAI works or need a showcase of the features, feel free to explore on this page. :)</h5>
       </div>
      <div class="accordion" id="accordionPanelsStayOpenExample">
 
@@ -95,9 +85,9 @@
                   <div class="accordion-body">
                       <strong>Installed but nothing happens?</strong><br>
                       If you installed our extension in your browser of choice and wonder where to find it, fear not! It can be accessed through <strong>three</strong> different ways:<br><br>
-                      &emsp;1. Open StudyMateAi via the magic sidebar (see the icon in the bottom left/right? Try to hover over it with your mouse). <strong>Tipp:</strong> The position can be changed in the settings.<br><br>
-                      &emsp;2. Open the StudyMateAi popup (default shortcut: <code>ctrl + shift + x</code>). <strong>Tipp:</strong> Try the shortcut when its minimized.<br><br>
-                      &emsp;3. Access StudyMateAi via your browsers extensions menu at the top right. Maybe you already spottet our icon? In Chrome, click the small puzzle piece and then StudyMateAi.<br>&emsp;&emsp;<strong>Tipp:</strong> Use the pin icon next to our extension to create a shortcut in the top right.<br>
+                      &emsp;1. Open StudyMateAI via the magic sidebar (see the icon in the bottom left/right? Try to hover over it with your mouse). <strong>Tipp:</strong> The position can be changed in the settings.<br><br>
+                      &emsp;2. Open the StudyMateAI popup (default shortcut: <code>ctrl + shift + x</code>). <strong>Tipp:</strong> Try the shortcut when its minimized.<br><br>
+                      &emsp;3. Access StudyMateAI via your browsers extensions menu at the top right. Maybe you already spottet our icon? In Chrome, click the small puzzle piece and then StudyMateAI.<br>&emsp;&emsp;<strong>Tipp:</strong> Use the pin icon next to our extension to create a shortcut in the top right.<br>
                       <img class="icon" src=pngs\StudyMateAI-Logo.png width="50" height="50" >
                       <div class="mouse-icon">
                           <i class="fa fa-mouse-pointer"></i>
@@ -126,11 +116,11 @@
               </h2>
               <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
                   <div class="accordion-body">
-                      <strong>How to use StudyMateAi to get fast and simple explanations.</strong><br>
+                      <strong>How to use StudyMateAI to get fast and simple explanations.</strong><br>
                       It is fairly easy: <br><br>
                       &emsp;1. Select the word you want further explanation on. This could be a single word, a phrase or the name of a concept.<br>
-                      &emsp;2. Right click and navigate to 'StudyMateAi' and choose 'Definition'<br>
-                      &emsp;3. Open StudyMateAi via the magic sidebar or your popup (default shortcut: <code>ctrl + shift + x</code>)<br>
+                      &emsp;2. Right click and navigate to 'StudyMateAI' and choose 'Definition'<br>
+                      &emsp;3. Open StudyMateAI via the magic sidebar or your popup (default shortcut: <code>ctrl + shift + x</code>)<br>
                       &emsp;4. Click 'Send request'
                       <input type="text" class="form-control" id="pdf-document"
                              placeholder="DNA" readonly style="margin-top: 1%">
@@ -151,11 +141,11 @@
               </h2>
               <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
                   <div class="accordion-body">
-                      <strong>How to use StudyMateAi to make complex text comprehensive.</strong><br>
+                      <strong>How to use StudyMateAI to make complex text comprehensive.</strong><br>
                       It is pretty straight forward:<br><br>
                       &emsp;1. Select the text you want to (short) summarize. Please note that we can currently handle requests with a <strong>maximum of 1000 words</strong><br>
-                      &emsp;2. Right click and navigate to 'StudyMateAi' and choose 'Summarize Selection' or 'Short Summary'<br>
-                      &emsp;3. Open StudyMateAi via the magic sidebar or your popup (default shortcut: <code>ctrl + shift + x</code>)<br>
+                      &emsp;2. Right click and navigate to 'StudyMateAI' and choose 'Summarize Selection' or 'Short Summary'<br>
+                      &emsp;3. Open StudyMateAI via the magic sidebar or your popup (default shortcut: <code>ctrl + shift + x</code>)<br>
                       &emsp;4. Click 'Send request'
                       <textarea class="form-control"
                              readonly style="margin-top: 1%;" cols="100" rows="10">"Artificial intelligence (AI) is intelligence—perceiving, synthesizing, and inferring information—demonstrated by machines, as opposed to intelligence displayed by non-human animals and humans. Example tasks in which this is done include speech recognition, computer vision, translation between (natural) languages, as well as other mappings of inputs.
@@ -221,7 +211,7 @@ As machines become increasingly capable, tasks considered to require 'intelligen
               </h2>
               <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
                   <div class="accordion-body">
-                      <strong>How to use StudyMateAi to make complex text comprehensive.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                      <strong>How to use StudyMateAI to make complex text comprehensive.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
                   </div>
               </div>
           </div>
@@ -251,117 +241,20 @@ As machines become increasingly capable, tasks considered to require 'intelligen
           </div>
       </div>
   </div>
-<div class="container">
-    <div class="row">
-        <div class="col">
 
-            <h1><p><b>Insert Tutorial for StudyMateAI </b></p></h1>
-          
-        </div>
-    </div>
-
-
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <h3><p><b> Too lazy to perpare for your exercise-session?
-                    <br>We have you covered!</b></p></h3>
-                <img src="pngs/studym8 excercise example.png" class="image-fluid image-border img_autofit" >
-            </div>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="row">
-            <div class="col" id="useitforany">
-                <h3><p> <b> StudyMateAI may be desgined to help you study
-                    <br> but you can use it for almost anything!</b></p></h3>
-                <img src="pngs/studym8 creative question example.png" class="image-fluid image-border img_autofit" style="max-width:40%;">
-            </div>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="row">
-            <div class="col">
-                <h3><p> <b> Too lazy to read all of that?</b></p></h3>
-                <img src="pngs/studym8 too lazy to read all that.png" class="image-fluid image-border img_autofit" >
-            </div>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="row">
-            <div class="col" id="flashcardsexample">
-                <h3><p> <b> How about some flashcards for <br>that upcoming biology test?</b></p></h3>
-                <img src="pngs/studym8 flashcards.png" class="image-fluid image-border img_autofit" style="max-width:80%;" >
-            </div>
-            <div class="col" id="explorefunctions">
-                <h3><p> <b> Explore all of our functions <br> to make your life easier!</b></p></h3>
-                <img src="pngs/studym8 explore our functions.png" class="image-fluid image-border img_autofit " style="max-width:80%;" >
-            </div>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="row">
-            <div id="howto"><h1> <b>How to get started:</b></h1><br> <br></div>
-            <div class="col align-self-baseline" id="howto1">
-                <h1 style="text-align: start;"><b>1.</b></h1><h3><b>Register on Openai.com <br>
-                or sign in with your account</b></h3>
-                <img src="pngs/How to start 1.png" class="image-fluid image-border img_autofit" style="max-width:80%;">
-            </div>
-            <div class="col" id="howto2">
-                <img src="pngs/How to start 2.png" class="image-fluid image-border img_autofit" >
-            </div>
-            <div class="col">
-                <h3>  <p> This process requires your email and phonenumber. <br>
-                    <br>
-                    This information is needed to verify that you are a real user. In return  you get a free 3-month trial 😎</p></h3>
-                <h5><p>Don't worry you do not enter an subscription service after the free trial has ended! For
-                    deatils see: <a href="https://openai.com/api/pricing/">https://openai.com/api/pricing/</a>
-                </p></h5>
-            </div>
-        </div>
-        <br>
-        <br>
-        <br>
-        <div class="row">
-            <h4 style="text-align: center;"><p> Only 2 steps left and you are ready to go!</p></h4>
-            <div class="col align-self-baseline">
-                <h1 style="text-align: start;"><b>2.</b></h1><h5><p>Navigate to: <a href="https://platform.openai.com/account/api-keys">https://platform.openai.com/account/api-keys</a> <br>
-                and click on "Create  new secret key"</p></h5>
-                <img src="pngs/How to start 4.png" class="image-fluid image-border img_autofit" style="max-width:80%;">
-            </div>
-            <div class="col">
-                <br>
-                <h1 style="text-align: start;"><b>3.</b></h1><h4><p> All that's left to do is copy and paste the key into <br>
-                the StudyMateAI extension 🚀<br>
-                if you have it installed just use <code>ctrl+shift+y</code></p></h5>
-                <img src="pngs/How to start 5.png" class="image-fluid image-border img_autofit" style="max-width:80%;">
-                <br>
-                <br>
-            </div>
-        </div>
-    </div>
-
-</div>
 
 <footer class="py-3 my-4">
-    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+    <ul class="nav justify-content-center  pb-3 mb-3">
       <li class="nav-item"><a href="https://studym8ai.app/" class="nav-link px-2 text-muted">Home</a></li>
-      <li class="nav-item"><a href="https://studym8ai.app/how_is_this_free.html" class="nav-link px-2 text-muted">How is this Free?</a></li>
+      <li class="nav-item"><a href="https://studym8ai.app/tutorial.html" class="nav-link px-2 text-muted">Tutorial</a></li>
+      <li class="nav-item"><a href="https://studym8ai.app/how_is_this_free.html" class="nav-link px-2 text-muted">Privacy policy</a></li>
       <li class="nav-item"><a href="https://www.buymeacoffee.com/studyM8" class="nav-link px-2 text-muted">Coffee?</a></li>
       <li class="nav-item"><a href="https://linktr.ee/studym8" class="nav-link px-2 text-muted">About</a></li>
     </ul>
+    <hr>
     <p class="text-center text-muted">© 2023 Gian Hofmann, Tom Sommerfeld</p>
     <p class="text-center text-muted" id="version"></p>
+    <p class="text-center text-muted"><a class="text-muted" style="text-decoration: none;" href="">Impressum</a></p>
 </footer>
 </body>
 <script src=jquery.js></script>
