--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="sartup-login.css">
 </head>
 
-<header class="p-3 mb-3 border-bottom">
+<header class="p-3 mb-3">
     <nav class="container" role="navigation">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
@@ -49,18 +49,15 @@
 
         </div>
     </nav>
-</header>
+    <hr>
+</header> 
+
 
 <body>
   <!-- Page Title -->
-  <div class="container">
-    <div><img class="logo" src="pngs/StudyMateAI-Logo.png"  style="margin: auto; display: block;" > </div>
-    <h1>StudyMateAI</h1>
-    <button id="scroll-to-getstarted" class="btn btn-secondary mt-3" style="margin: 0 auto; display: block; font-size: larger;">Quickstart</button>
-  </div>
 
 <div class="container">
-  <div class="px-4 pt-5 my-5 text-center border-bottom">
+  <div class="px-4 pt-5 my-5 text-center">
     <h1 class="display-4 fw-bold">Simple but powerful</h1>
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Study-assistence while browsing</p>
@@ -69,95 +66,66 @@
       <div class="container px-5">
         <img src="/gifs/Simple Product Demonstration.gif" class="img-fluid  shadow-lg mb-4 image-border" alt="Example image" width="90%" height="" loading="lazy">
       </div>
+      <hr>
     </div>
   </div>  
 </div>
 
 <div class="container">
     <div class="row">
-        <div class="col px-4 pt-5 my-5 text-center border-bottom">
+        <div class="col px-4 pt-5 my-5 text-center">
             <h3><p><b> Too lazy to perpare for your exercise-session?
             <br>We have you covered!</b></p></h3>
             <img src="pngs/studym8 excercise example.png" class="image-fluid image-border img_autofit shadow-lg mb-4" >
+            <hr>
         </div>
     </div>
 
     <div class="row">
-        <div class="col px-4 pt-5 my-5 text-center border-bottom">
+        <div class="col px-4 pt-5 my-5 text-center">
             <h3><p> <b> StudyMateAI may be desgined to help you study
             <br> but you can use it for almost anything!</b></p></h3> 
             <img src="pngs/studym8 creative question example.png" class="image-fluid image-border img_autofit shadow-lg mb-4" style="max-width:30%;">
+          <hr>
         </div>
     </div>
 
     <div class="row">
-        <div class="col px-4 pt-5 my-5 text-center border-bottom">
+        <div class="col px-4 pt-5 my-5 text-center">
           <h3><p> <b> Too lazy to read all of that?</b></p></h3>
           <img src="pngs/studym8 too lazy to read all that.png" class="image-fluid image-border img_autofit shadow-lg mb-4" >
+          <hr>
         </div>
     </div>
 
     <div class="row">
-        <div class="col px-4 pt-5 my-5 text-center border-bottom">
+        <div class="col px-4 pt-5 my-5 text-center">
           <h3><p> <b> How about some flashcards for <br>that upcoming biology test?</b></p></h3>
           <img src="pngs/studym8 flashcards.png" class="image-fluid image-border img_autofit shadow-lg mb-4" style="max-width:60%;" >
         </div>
-        <div class="col px-4 pt-5 my-5 text-center border-bottom">
+        <div class="col px-4 pt-5 my-5 text-center">
           <h3><p> <b> Explore all of our functions <br> to make your life easier!</b></p></h3>
           <img src="pngs/studym8 explore our functions.png" class="image-fluid image-border img_autofit shadow-lg mb-4" style="max-width:60%;" >
         </div>
     </div>
 
-    <div class="row">
-      <div id="howto"><h1> <b>How to get started:</b></h1></div>
-      <div class="col align-self-baseline px-4 pt-5 my-5 text-center border-bottom">
-        <h1 style="text-align: start;"><b>1.</b></h1><h3><b>Register on Openai.com <br>
-        or sign in with your account</b></h3>
-        <img src="pngs/How to start 1.png" class="image-fluid image-border img_autofit shadow-lg mb-4" style="max-width:80%;">
-      </div>
-      <div class="col px-4 pt-5 my-5 text-center border-bottom">
-        <img src="pngs/How to start 2.png" class="image-fluid image-border img_autofit shadow-lg mb-4" >
-      </div>
-      <div class="col">
-        <h3>  <p> This process requires your email and phonenumber. <br>
-        <br>
-        This information is needed to verify that you are a real user. In return  you get a free 3-month trial 😎</p></h3>
-        <h5><p>Don't worry you do not enter an subscription service after the free trial has ended! For
-          details see: <a class="clean_links" href="https://openai.com/api/pricing/">https://openai.com/api/pricing/</a> 
-        </p></h5>
-      </div>
-    </div>
-
-    <div class="row">
-      <h4 style="text-align: center; margin-bottom: 0%;"><p> Only 2 steps left and you are ready to go!</p></h4>
-      <div class="col align-self-baseline text-center border-bottom">
-        <h1 style="text-align: start;"><b>2.</b></h1><h5><p>Navigate to: <a class="clean_links" href="https://platform.openai.com/account/api-keys">https://platform.openai.com/account/api-keys</a> <br>
-        and click on "Create  new secret key"</p></h5>
-        <img src="pngs/How to start 4.png" class="image-fluid image-border img_autofit shadow-lg mb-4 image-border" style="max-width:80%;">
-      </div>
-      <div class="col align-self-baseline px-4 pt-5 my-5 text-center border-bottom">
-        <br>
-        <h1 style="text-align: start;"><b>3.</b></h1><h4><p> All that's left to do is copy and paste the key into <br>
-          the StudyMateAI extension 🚀<br>
-        if you have it installed just use <code>ctrl+shift+y</code></p></h5>
-        <img src="pngs/How to start 5.png" class="image-fluid image-border img_autofit shadow-lg mb-4 image-border" style="max-width:60%;">
-      </div>
-    </div> 
-</div> 
-
 <img class="icon" src=pngs\StudyMateAI-Logo.png width="50" height="50" >
 <div class="mouse-icon">
   <i class="fa fa-mouse-pointer"></i>
 </div>
+
 <footer class="py-3 my-4">
-    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+    <ul class="nav justify-content-center pb-3 mb-3">
       <li class="nav-item"><a href="https://studym8ai.app/tutorial.html" class="nav-link px-2 text-muted">Tutorial</a></li>
-      <li class="nav-item"><a href="https://studym8ai.app/how_is_this_free.html" class="nav-link px-2 text-muted">How is this Free?</a></li>
+      <li class="nav-item"><a href="https://studym8ai.app/download.html" class="nav-link px-2 text-muted">Download</a></li>
+      <li class="nav-item"><a href="https://studym8ai.app/how_is_this_free.html" class="nav-link px-2 text-muted">Privacy policy</a></li>
       <li class="nav-item"><a href="https://www.buymeacoffee.com/studyM8" class="nav-link px-2 text-muted">Coffee?</a></li>
       <li class="nav-item"><a href="https://linktr.ee/studym8" class="nav-link px-2 text-muted">About</a></li>
     </ul>
+    <hr>
     <p class="text-center text-muted">© 2023 Gian Hofmann, Tom Sommerfeld</p>
     <p class="text-center text-muted" id="version"></p>
+    <p class="text-center text-muted"><a class="text-muted" style="text-decoration: none;" href="">Impressum</a></p>
 </footer>
 </body>
 <script src=jquery.js></script>
