--- a/on_install.html
+++ b/on_install.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="sartup-login.css">
 </head>
 
-<header class="p-3 mb-3 border-bottom">
+<header class="p-3 mb-3 ">
     <nav class="container" role="navigation">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
@@ -46,16 +46,16 @@
                     <i class="fa fa-sun" aria-hidden="true" style="display: none"></i>
                 </button>
             </div>
-
         </div>
     </nav>
+    <hr>
 </header>
 
 <body>
   <!-- Page Title -->
   
 <div class="container">
-  <div class="px-4 pt-5 my-5 text-center border-bottom">
+  <div class="px-4 pt-5 my-5 text-center ">
     <h1 class="display-4 fw-bold">Thank you for installing</h1>
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">You are almost ready to go! Just follow the steps <a class="clean_links" href="#" onclick="window.scroll({top: document.getElementById('How to get started').offsetTop, behavior: 'smooth'});">below</a>. <br> But first a little demonstration:</p>
@@ -158,14 +158,17 @@
   <i class="fa fa-mouse-pointer"></i>
 </div>
 <footer class="py-3 my-4">
-    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+    <ul class="nav justify-content-center  pb-3 mb-3">
+      <li class="nav-item"><a href="https://studym8ai.app/" class="nav-link px-2 text-muted">Home</a></li>
       <li class="nav-item"><a href="https://studym8ai.app/tutorial.html" class="nav-link px-2 text-muted">Tutorial</a></li>
-      <li class="nav-item"><a href="https://studym8ai.app/how_is_this_free.html" class="nav-link px-2 text-muted">How is this Free?</a></li>
+      <li class="nav-item"><a href="https://studym8ai.app/how_is_this_free.html" class="nav-link px-2 text-muted">Privacy policy</a></li>
       <li class="nav-item"><a href="https://www.buymeacoffee.com/studyM8" class="nav-link px-2 text-muted">Coffee?</a></li>
       <li class="nav-item"><a href="https://linktr.ee/studym8" class="nav-link px-2 text-muted">About</a></li>
     </ul>
+    <hr style="width: 100%;">
     <p class="text-center text-muted">© 2023 Gian Hofmann, Tom Sommerfeld</p>
     <p class="text-center text-muted" id="version"></p>
+    <p class="text-center text-muted"><a class="text-muted" style="text-decoration: none;" href="">Impressum</a></p>
 </footer>
 </body>
 <script src=jquery.js></script>
