--- a/privacy_policy_app.html
+++ b/privacy_policy_app.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="sartup-login.css">
 </head>
 
-<header class="p-3 mb-3 border-bottom">
+<header class="p-3 mb-3 ">
     <nav class="container" role="navigation">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
@@ -81,7 +81,7 @@
    
 
 <footer class="py-3 my-4">
-    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+    <ul class="nav justify-content-center  pb-3 mb-3">
       <li class="nav-item"><a href="https://studym8ai.app/" class="nav-link px-2 text-muted">Home</a></li>
       <li class="nav-item"><a href="https://studym8ai.app/tutorial.html" class="nav-link px-2 text-muted">Tutorial</a></li>
       <li class="nav-item"><a href="https://www.buymeacoffee.com/studyM8" class="nav-link px-2 text-muted">Coffee?</a></li>
