--- a/tutorial.html
+++ b/tutorial.html
@@ -95,8 +95,8 @@
           <h2 class="fw-bold mb-5 text-center">How to use StudyMateAi's Features<br></h2>
           <div class="row gx-lg-5 mb-5 align-items-center">
               <div class="col-md-6 mb-4 mb-md-0">
-                  <input type="text" class="form-control" id="pdf-document"
-                         placeholder="DNA" readonly style="margin-top: 1%">
+                  <textarea type="text" class="form-control" id="pdf-document"
+                            readonly style="margin-top: 1%">DNA</textarea>
                   <section class="form-select" style="margin-top: 1%">
                       <option value="Define" selected disabled>Definition</option>
                   </section>
