fix link below?

--- a/on_install.html
+++ b/on_install.html
@@ -58,7 +58,7 @@
   <div class="px-4 pt-5 my-5 text-center ">
     <h1 class="display-4 fw-bold">Thank you for installing</h1>
     <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">You are almost ready to go! Just follow the steps <a class="clean_links" href="#" onclick="window.scroll({top: document.getElementById('How to get started').offsetTop, behavior: 'smooth'});">below</a>. <br> But first a little demonstration:</p>
+      <p class="lead mb-4">You are almost ready to go! Just follow the steps <a class="clean_links" href="#How to get started">below</a>. <br> But first a little demonstration:</p>
     </div>
     <div class="overflow-hidden" style="max-height: 100vh;">
       <div class="container px-5">
