--- a/index.html
+++ b/index.html
@@ -70,6 +70,90 @@
   </div>  
 </div>
 
+
+<div class="container px-4 py-5" id="hanging-icons">
+  <h1 class="text-center pb-2">Six different study functions </h1>
+  <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+    <div class="col d-flex align-items-start">
+      <div class="icon-square text-dark flex-shrink-0 me-3">
+      <img id="invert-0" src="svgs/define-icon.svg" srcset="" style="width: 4rem;">
+      </div>
+      <div>
+        <h2>Definition</h2>
+        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+        <a href="#" class="btn btn-secondary">
+          Try in demo
+        </a>
+      </div>
+    </div>
+    <div class="col d-flex align-items-start">
+      <div class="icon-square text-dark flex-shrink-0 me-3">
+        <img id="invert-1" src="svgs/summarize-icon.svg" alt="" srcset="" style="width: 4rem;">
+      </div>
+      <div>
+        <h2>Summarize</h2>
+        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+        <a href="#" class="btn btn-secondary">
+          Try in demo
+        </a>
+      </div>
+    </div>
+    <div class="col d-flex align-items-start">
+      <div class="icon-square text-dark flex-shrink-0 me-3">
+        <img id="invert-2" src="svgs/summarize-short-icon.svg" alt="" srcset="" style="width: 4rem;">
+    </div>
+      <div>
+        <h2>Short Summary</h2>
+        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+        <a href="#" class="btn btn-secondary">
+          Try in demo
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+    <div class="col d-flex align-items-start">
+      <div class="icon-square text-dark flex-shrink-0 me-3">
+      <img id="invert-3" src="svgs/summarizebullets-icon.svg" alt="" srcset="" style="width: 4rem;">
+      </div>
+      <div>
+        <h2>Summarize in Bullets</h2>
+        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+        <a href="#" class="btn btn-secondary">
+          Try in demo
+        </a>
+      </div>
+    </div>
+    <div class="col d-flex align-items-start">
+      <div class="icon-square text-dark flex-shrink-0 me-3">
+        <img id="invert-4" src="svgs/answerquestion-icon.svg" alt="" srcset="" style="width: 4rem;">
+      </div>
+      <div>
+        <h2>Answer Question</h2>
+        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+        <a href="#" class="btn btn-secondary">
+          Try in demo
+        </a>
+      </div>
+    </div>
+    <div class="col d-flex align-items-start">
+      <div class="icon-square text-dark flex-shrink-0 me-3">
+        <img id="invert-5" src="svgs/flashcard-icon.svg" alt="" srcset="" style="width: 4rem;">
+    </div>
+      <div>
+        <h2>Create Flashcard</h2>
+        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+        <a href="#" class="btn btn-secondary">
+          Try in demo
+        </a>
+      </div>
+    </div>
+  </div>
+  <hr>
+</div>
+
+
+
 <div class="container">
     <div class="row">
         <div class="col px-4 pt-5 my-5 text-center">
