--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div>
         <h2>Definition</h2>
         <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-        <a href="#" class="btn btn-secondary">
+        <a id="popup-0" href="#" class="btn btn-secondary">
           Try in demo
         </a>
       </div>
@@ -93,7 +93,7 @@
       <div>
         <h2>Summarize</h2>
         <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-        <a href="#" class="btn btn-secondary">
+        <a id="popup-1" href="#" class="btn btn-secondary">
           Try in demo
         </a>
       </div>
@@ -105,7 +105,7 @@
       <div>
         <h2>Short Summary</h2>
         <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-        <a href="#" class="btn btn-secondary">
+        <a id="popup-2" href="#" class="btn btn-secondary">
           Try in demo
         </a>
       </div>
@@ -119,7 +119,7 @@
       <div>
         <h2>Summarize in Bullets</h2>
         <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-        <a href="#" class="btn btn-secondary">
+        <a id="popup-3" href="#" class="btn btn-secondary">
           Try in demo
         </a>
       </div>
@@ -131,7 +131,7 @@
       <div>
         <h2>Answer Question</h2>
         <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-        <a href="#" class="btn btn-secondary">
+        <a id="popup-4" href="#" class="btn btn-secondary">
           Try in demo
         </a>
       </div>
@@ -141,9 +141,9 @@
         <img id="invert-5" src="svgs/flashcard-icon.svg" alt="" srcset="" style="width: 4rem;">
     </div>
       <div>
-        <h2>Create Flashcard</h2>
+        <h2>Create Flashcards</h2>
         <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-        <a href="#" class="btn btn-secondary">
+        <a id="popup-5" href="#" class="btn btn-secondary">
           Try in demo
         </a>
       </div>
@@ -214,6 +214,6 @@
 <script src=jquery.js></script>
 <script src="bootstrap.js"></script>
 <script src="darkmode.js"></script>
-<script src="startup-login-tab.js"></script>
+<script src="popupfeatures.js"></script>
 
 </html>
