complete features hero landingpage

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
       <div>
         <h2>Definition</h2>
-        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+        <p><code>The days of typing Serendipity definition into google are over.</code> Get definitions for whatever word you want within seconds!</p>
         <a id="popup-0" href="#" class="btn btn-secondary">
           Try in demo
         </a>
@@ -92,7 +92,7 @@
       </div>
       <div>
         <h2>Summarize</h2>
-        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+        <p><code>Summarize up to 1000 words effortlessly.<br></code> I bet this is what you always wanted for school. <br></p>
         <a id="popup-1" href="#" class="btn btn-secondary">
           Try in demo
         </a>
@@ -104,7 +104,7 @@
     </div>
       <div>
         <h2>Short Summary</h2>
-        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+        <p><code>Summarize text even more compact for your specific demands.<br></code>This can be quite handy for studying.</p>
         <a id="popup-2" href="#" class="btn btn-secondary">
           Try in demo
         </a>
@@ -118,7 +118,7 @@
       </div>
       <div>
         <h2>Summarize in Bullets</h2>
-        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+        <p><code>Need some bullet points for a presentation?<br></code>Turn text into bullet points. What a great productivity hack!</p>
         <a id="popup-3" href="#" class="btn btn-secondary">
           Try in demo
         </a>
@@ -130,7 +130,7 @@
       </div>
       <div>
         <h2>Answer Question</h2>
-        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+        <p><code>Got a simple assignment to do? <br></code>Turns out Chat GPT is great for providing text-answers to even more complex problems! <BR></BR></p>
         <a id="popup-4" href="#" class="btn btn-secondary">
           Try in demo
         </a>
@@ -142,7 +142,7 @@
     </div>
       <div>
         <h2>Create Flashcards</h2>
-        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+        <p><code>Learning with flashcards is one thing but writing them yourself?<br></code>That just seems unnecessary these days.<BR></BR></p>
         <a id="popup-5" href="#" class="btn btn-secondary">
           Try in demo
         </a>
