das sollte auf allen geräten clickable sein

--- a/chat_gpt_introduction_to_studymateai-article.html
+++ b/chat_gpt_introduction_to_studymateai-article.html
@@ -135,16 +135,16 @@
         </article>
         <!-- Share Links Footer-->
         <div class="text-center">
-            <a href="https://twitter.com/intent/tweet?url=studym8ai.app/chat_gpt_introduction_to_studymateai-article.html&text=Check out this article!" target="_blank" rel="noopener" class="social-icon">
+            <a href="https://twitter.com/intent/tweet?url=https://studym8ai.app/chat_gpt_introduction_to_studymateai-article.html&text=Check out this article!" target="_blank" rel="noopener" class="social-icon">
                 <i class="fab fa-twitter fa-2x"></i>
             </a>
-            <a href="https://www.facebook.com/sharer/sharer.php?u=studym8ai.app/chat_gpt_introduction_to_studymateai-article.html" target="_blank" rel="noopener" class="social-icon">
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://studym8ai.app/chat_gpt_introduction_to_studymateai-article.html" target="_blank" rel="noopener" class="social-icon">
                 <i class="fab fa-facebook fa-2x"></i>
             </a>
-            <a href="https://www.linkedin.com/shareArticle?url=studym8ai.app/chat_gpt_introduction_to_studymateai-article.html" target="_blank" rel="noopener" class="social-icon">
+            <a href="https://www.linkedin.com/shareArticle?url=https://studym8ai.app/chat_gpt_introduction_to_studymateai-article.html" target="_blank" rel="noopener" class="social-icon">
                 <i class="fab fa-linkedin fa-2x"></i>
             </a>
-            <a href="whatsapp://send?text=Check out this article! studym8ai.app/chat_gpt_introduction_to_studymateai-article.html" data-action="share/whatsapp/share" target="_blank" rel="noopener" class="social-icon">
+            <a href="whatsapp://send?text=Check out this article! https://studym8ai.app/chat_gpt_introduction_to_studymateai-article.html" data-action="share/whatsapp/share" target="_blank" rel="noopener" class="social-icon">
                 <i class="fab fa-whatsapp fa-2x"></i>
             </a>
         </div>
