letzter feinschliff article

--- a/chat_gpt_introduction_to_studymateai-article.html
+++ b/chat_gpt_introduction_to_studymateai-article.html
@@ -113,7 +113,7 @@
                         <h2 class="section-heading">Similar Tools</h2>
                         <p>While StudyMateAI is a powerful and innovative tool, it is not the only one of its kind. There are several other AI-powered tools and apps that have been developed to enhance the study experience. These include:</p>
                         <p>Quillbot: a text-editing tool that uses AI to improve grammar and provide synonyms <br><br>
-                            Readability: a browser extension that uses AI to summarize articles and provide definitions <br><br>
+                            ChatGPT for Google: Lets users use Chat GPT in the search engine <br><br>
                             Anki: a popular flashcard app that uses AI to help users to better retain information</p>
                         <h2 class="section-heading">The Future of AI in Education</h2>
                         <p>The future of AI in education looks bright. As the technology continues to evolve, we can expect to see even more powerful and innovative tools that can enhance the study experience. Some of the areas where AI is likely to have the greatest impact include:</p>
@@ -134,7 +134,7 @@
             </div>
         </article>
         <!-- Share Links Footer-->
-        <div class="text-center">
+        <div class="text-center text-center-icons">
             <a href="https://twitter.com/intent/tweet?url=https://studym8ai.app/chat_gpt_introduction_to_studymateai-article.html&text=Check out this article!" target="_blank" rel="noopener" class="social-icon">
                 <i class="fab fa-twitter fa-2x"></i>
             </a>
