--- a/chat_gpt_introduction_to_studymateai-article.html
+++ b/chat_gpt_introduction_to_studymateai-article.html
@@ -82,7 +82,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <p>Artificial Intelligence (AI) has been making waves in various industries and fields, and education is no exception. With the advent of AI, the way we study and learn is set to change dramatically. One of the latest tools in the field is StudyMateAI, an innovative browser extension that utilizes the cutting-edge Davinci-3 model of OpenAI to enhance the study experience. In this article, we will take a closer look at StudyMateAI and explore the future of studying with AI.</p>
                         <div class="text-center">
-                            <h2>Keywords List:</h2>
+                            <h2>Keyword List</h2>
                             <div class="d-inline-block text-start ">
                               <ul>
                                 <li>Artificial Intelligence (AI)</li>
